# cbk_projects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xmake.lua
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  option
apps/: CMakeLists.txt
apps/app_SplitPictureTool/: CMakeLists.txt
apps/app_SplitPictureTool/data/: setup.xml
apps/app_SplitPictureTool/source/: CMakeLists.txt  main.cpp
apps/app_SplitPictureToolGui/: CMakeLists.txt  app_SplitPictureToolGui.pjd
apps/app_SplitPictureToolGui/source/: CMakeLists.txt  SplitPictureToolGuiFrame.cpp  SplitPictureToolGuiFrame.h
apps/hello_world/: CMakeLists.txt  setting.json
apps/hello_world/source/: main.cpp
apps/lib_SplitPictureTool/source/: CMakeLists.txt  lib_SplitPictureTool.cpp  lib_SplitPictureTool.h
apps/test_imgui/: .main.cpp.bak.swp  main.cpp  main.cpp.bak2
apps/test_imgui/.xmake/linux/x86_64/: xmake.conf
apps/test_imgui/.xmake/linux/x86_64/cache/: config  detect  history
backup/: CMakeList.txt.20191013
backup/app_SplitPictureTool/source/: CMakeLists.txt  main.cpp
backup/app_SplitPictureToolGui/design/: app_SplitPictureToolGui.pjd
backup/app_SplitPictureToolGui/source/: SplitPictureToolGuiFrame.cpp  SplitPictureToolGuiFrame.h  app_splitpicturetoolguiapp.cpp  app_splitpicturetoolguiapp.h
backup/gloox_test/: CMakeLists.txt
backup/gloox_test/source/: XmppClient.cpp  XmppClient.h  main.cpp
backup/hello_world/: CMakeLists.txt  user_setting.json
backup/hello_world/source/: main.cpp
cbk/: CMakeLists.txt  cbk.h
cbk/core/: Engine.cpp  Engine.h
cbk/core/linux/: EngineLinux.cpp  EngineLinux.h  main.cpp
cbk/file/linux/: FileSystemLinux.h
cbk/files/: FileImplement.h  FileSystem.cpp  FileSystem.h  FileUtil.cpp  Interface.h
cbk/files/linux/: FileSystemLinux.cpp  FileSystemLinux.h
cbk/graphics/: Renderer.cpp  Renderer.h
cbk/include/: BaseType.cpp  BaseType.h  Setup.h  StdInclude.h
cbk/math/: Size2.h  Vector2.cpp  Vector2.h
cbk/string/: StringInterface.h  StringUtil.cpp
cbk/texture/: Texture.h
cbk/utils/: NonCopyable.h  Setting.cpp  Setting.h
cbk/window/: Window.cpp  Window.h
doc/: cbk结构图.xmind  glfw_main_tpl.cpp  glfw_main_triangle.cpp
doc/template/: app_CMakeLists.txt  lib_CMakeLists.txt  root_CMakeLists.txt
include/cbk/: cbk.h  cbkprec.h  chkconf.h  define.h  platform.h  setup.h
libs/: CMakeLists.txt  wxWidgets使用.txt
libs/gloox/: CMakeLists.txt
libs/gloox/source/: config.h.unix
libs/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp
libs/lib_Base/: CMakeLists.txt  README.md
libs/lib_Base/source/: BaseDef.h
libs/lib_Base/source/modules/: Convert.cpp  Convert.h  FileUtil.cpp  FileUtil.h
libs/lib_Base/source/modules/Convert/: ConvertImplement.h  ConvertInterface.h  ConvertUtil.cpp
libs/lib_Base/source/modules/File/: FileUtil.cpp  File_impl.h  File_interface.h
libs/lib_Base/source/modules/String/: StringImplement.h  StringUtil.cpp  String_impl.h
libs/lib_SplitPictureTool/: CMakeLists.txt
libs/lib_SplitPictureTool/source/: CMakeLists.txt  lib_SplitPictureTool.cpp  lib_SplitPictureTool.h
libs/lib_jpeg/: CMakeLists.txt
libs/lib_jpeg/source/: CMakeLists.txt
libs/lib_png/: CMakeLists.txt
libs/lib_png/source/: Android.mk  CMakeLists.txt
libs/lib_tinyxml/: CMakeLists.txt
libs/lib_tinyxml/source/: CMakeLists.txt
libs/lib_wxwidgets/include/wx/: setup.h
libs/lib_wxwidgets/source/: CMakeLists.txt
libs/lib_wxwidgets/src/: CMakeLists.txt
libs/lib_zlib/: CMakeLists.txt
libs/lib_zlib/source/: CMakeLists.txt
vender/: CMakeLists.txt
vender/lib_jpeg/source/: CMakeLists.txt
vender/lib_png/source/: CMakeLists.txt
vender/lib_tinyxml/source/: CMakeLists.txt
vender/lib_wxwidgets/include/wx/richtext/: richtextbackgroundpage.h
vender/lib_wxwidgets/lib/vc_lib/mswud/wx/: setup.h
vender/lib_wxwidgets/source/: CMakeLists.bak.txt  CMakeLists.txt
vender/lib_zlib/source/: CMakeLists.txt
vender/wxWidgets/: wxWidgets使用.txt
vender/wxWidgets/wxWidgets-3.1.0/include/wx/: setup.h
vender/wxWidgets/wxWidgets-3.1.0/lib/vc_lib/mswud/: build.cfg
vender/wxWidgets/wxWidgets-3.1.0/src/: CMakeLists.txt
